@@ -1,8 +1,32 @@
+/**
+ * MIT License
+ *
+ * Copyright (c) 2025 Simon Trasler
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * of this software and associated documentation files (the "Software"), to deal
+ * in the Software without restriction, including without limitation the rights
+ * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in all
+ * copies or substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+ * SOFTWARE.
+ */
 package org.trasler.utils.openrtb;
 
 import com.google.protobuf.Descriptors.Descriptor;
 import com.google.protobuf.Descriptors.FieldDescriptor;
 import com.google.protobuf.Extension;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
@@ -10,7 +34,7 @@ import java.util.Set;
 
 /**
  *
- * @author simon
+ * @author Simon Trasler
  */
 public class ExtensionRegistry {
     private final Map<String, Set<FieldDescriptor>> extensions = new HashMap<>();
@@ -23,6 +47,6 @@ public class ExtensionRegistry {
 
     public Set<FieldDescriptor> getAllExtensions(Descriptor descriptor) {
         String name = descriptor.getFullName();
-        return extensions.getOrDefault(name, Set.of());
+        return extensions.getOrDefault(name, Collections.emptySet());
     }
 }
